<resources>
    <string name="Error">خطا</string>
    <string name="NetworkError">خطا در شبکه</string>
    <string name="NoConnectionError">اتصال برقرار نمیباشد</string>
    <string name="ServerError">خطا مجددا تلاش کنید</string>
    <string name="TimeoutError">خطا در برقراری ارتباط دوباره سعی کنید</string>
    <string name="User_invited_to_group">User invited to group.</string>
    <string name="User_joined_to_group">User joined to group.</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_2">www.sapp.ir</string>
    <string name="about_3">© Copyright 2018</string>
    <string name="accept">Accept</string>
    <string name="access_denied">Access Denied!</string>
    <string name="account_name">Account Name</string>
    <string name="account_number">Account Number</string>
    <string name="action_add_administrator">Add Administrator</string>
    <string name="action_add_follower">Add Follower</string>
    <string name="action_add_participants">Add Members</string>
    <string name="action_add_participants_block">Add To Black List</string>
    <string name="action_add_to_stickers">Add to stickers</string>
    <string name="action_block">Block</string>
    <string name="action_block_contact">Block Contact</string>
    <string name="action_call">Call</string>
    <string name="action_camera">Camera</string>
    <string name="action_change">Change</string>
    <string name="action_change_background">Chat background</string>
    <string name="action_change_role">Change User Access</string>
    <string name="action_change_tab">Tabs</string>
    <string name="action_change_theme">Theme</string>
    <string name="action_chat">Chat</string>
    <string name="action_checkable_items">Multi Selection</string>
    <string name="action_clear_history">Clear History</string>
    <string name="action_copy">Copy</string>
    <string name="action_create_an_invite_link">Invite Link</string>
    <string name="action_crop">Crop</string>
    <string name="action_deactivate">Deactivate Account</string>
    <string name="action_default">Default</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_chat">Delete Chat</string>
    <string name="action_delete_sticker">Delete Sticker Package</string>
    <string name="action_disable">Disable</string>
    <string name="action_disable_find_friends">Disable</string>
    <string name="action_done">Done</string>
    <string name="action_edit">Edit</string>
    <string name="action_end_call">End Call</string>
    <string name="action_file">File</string>
    <string name="action_forward">Forward</string>
    <string name="action_free_call">Free Call</string>
    <string name="action_gallery">Gallery</string>
    <string name="action_gif">Gif</string>
    <string name="action_hold">Hold</string>
    <string name="action_inappropriate">Inappropriate</string>
    <string name="action_invisible_sticker">Invisible</string>
    <string name="action_join">Join</string>
    <string name="action_leave_and_delete">Leave and Delete</string>
    <string name="action_leave_and_delete_channel">Leave and Delete</string>
    <string name="action_leave_group">Leave Group</string>
    <string name="action_lef_rotate">Left Rotate</string>
    <string name="action_location">Location</string>
    <string name="action_log_out">Log Out</string>
    <string name="action_long">Long</string>
    <string name="action_music">Music</string>
    <string name="action_mute">Mute</string>
    <string name="action_mute_notification">Mute Notification</string>
    <string name="action_new_contact">New Contact</string>
    <string name="action_payment">Payment</string>
    <string name="action_photo">Photo</string>
    <string name="action_pin_bot">Pin Bot</string>
    <string name="action_pin_channel">Pin Channel</string>
    <string name="action_pin_chat">Pin Chat</string>
    <string name="action_religious_prayers_settings">Religious Prayers Setting</string>
    <string name="action_remove_from_channel">Remove From Channel</string>
    <string name="action_remove_from_group">Remove From Group</string>
    <string name="action_remove_photo">Remove Photo</string>
    <string name="action_reply">Reply</string>
    <string name="action_report">Report</string>
    <string name="action_revoke_invite_link">Revoke Invite Link</string>
    <string name="action_right_rotate">Right Rotate</string>
    <string name="action_save_to_gallery">Save to gallery</string>
    <string name="action_search">Search</string>
    <string name="action_search_chat">Search</string>
    <string name="action_select_color">Color</string>
    <string name="action_share">Share</string>
    <string name="action_short">Short</string>
    <string name="action_show_interactive_messages">Show Interactive Messages</string>
    <string name="action_spam">Spam</string>
    <string name="action_speaker">Speaker</string>
    <string name="action_start_a_conversation">Start a Conversation</string>
    <string name="action_sticker_settings">Sticker Settings</string>
    <string name="action_sync">Sync Contacts</string>
    <string name="action_unblock">Unblock</string>
    <string name="action_unblock_user">Unblock User</string>
    <string name="action_unpin_bot">Unpin Bot</string>
    <string name="action_unpin_channel">Unpin Channel</string>
    <string name="action_unpin_chat">Unpin Chat</string>
    <string name="action_video">Video</string>
    <string name="action_violence">Violence</string>
    <string name="action_visible_sticker">Visible</string>
    <string name="activation_code">Activation Code</string>
    <string name="activation_code_description_part_1">The activation code will be send to your phone\n(</string>
    <string name="activation_code_description_part_2">) by SMS.</string>
    <string name="activation_code_hint">Enter the activation code here</string>
    <string name="active_session">Active Sessions</string>
    <string name="active_session_error_one_hour">تا یک‌ساعت پس از فعال‌سازی حساب سروشی، امکان غیرفعال‌سازی نشست‌های دیگر از طریق این دستگاه وجود نخواهد داشت.</string>
    <string name="active_session_item_list">Active Sessions</string>
    <string name="add_a_caption">Add a caption …</string>
    <string name="add_follower">Add Follower</string>
    <string name="add_new_city">Add New City</string>
    <string name="add_option">Add Option</string>
    <string name="add_payment_button">Add Option</string>
    <string name="add_remove_blocked_contacts">Add or remove users from blocked contacts list.</string>
    <string name="admin">Admin</string>
    <string name="after">After</string>
    <string name="all_setting_item">همه</string>
    <string name="allow_reply_channel">Allowing followers to reply on messages</string>
    <string name="allow_soroush_access_to_your_microphone">To make a call, allow Soroush access to your microphone.</string>
    <string name="already_exist_error_message">This channel id is already taken.</string>
    <string name="always_enable_sub_title">Keep a connection to receive messages when screen is turned off.</string>
    <string name="always_enable_title">Always Keep Connection</string>
    <string name="amount_cant_be_empty">Amount can\'t be empty!</string>
    <string name="amount_charge">اعتبار فعلی :</string>
    <string name="amount_label">مبلغ</string>
    <string name="answer">Answer</string>
    <string name="app_font">NotoNaskhArabicUI-Regular.ttf</string>
    <string name="app_name">Soroush</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply_charge">Apply Charge</string>
    <string name="arabic">العربية</string>
    <string name="are_typing_lowercase">are typing</string>
    <string name="are_you_sure_send_this_message">Are you sure to send this message?</string>
    <string name="are_you_sure_to_apply_this_theme">Are you sure to apply this theme?</string>
    <string name="are_you_sure_to_block">Are you sure to block %1$s ?</string>
    <string name="are_you_sure_to_deactivate_account_">Are you sure to deactivate account?</string>
    <string name="button_no">NO</string>
    <string name="button_yes">YES</string>
    <string name="cancel">Cancel</string>
    <string name="create_poll">Create Poll</string>
    <string name="deactivate_my_account">DEACTIVATE MY ACCOUNT</string>
    <string name="english">English</string>
    <string name="farsi">فارسی</string>
    <string name="find_friends">Find Friends</string>
    <string name="follow">Follow</string>
    <string name="follow_channel_description">Follow us if you wish.</string>
    <string name="follow_channel_title">Thank you for seeing our channel.</string>
    <string name="forward_to_me">Save to my cloud</string>
    <string name="introduction_one_content">Text &amp; voice messaging, Unlimited videos, pictures and file sharing</string>
    <string name="introduction_one_header">Messaging</string>
    <string name="invite_link">Invite Link</string>
    <string name="invite_link_title_dialog">Soroush users will be able to join your group by following this link.</string>
    <string name="nav_services">Services</string>
    <string name="new_channel">New Channel</string>
    <string name="new_group_chat">New Group</string>
    <string name="new_update_description">A new soroush update is now available. Would you like to install it?</string>
    <string name="new_update_title">New Update</string>
    <string name="save_media">Save To Gallery</string>
    <string name="start_a_conversation">Start conversation with</string>
    <string name="sticker_market">Sticker Market</string>
</resources>