<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:id="@id/update_dialog_root" android:paddingTop="16dp" android:paddingBottom="12dp" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView android:id="@id/soroush_icon" android:layout_width="UNKNOWN_DATA_0x5001" android:layout_height="UNKNOWN_DATA_0x5001" android:src="@mipmap/ic_launcher2" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
    <TextView android:textSize="@dimen/contacts_list_item_text" android:textStyle="bold" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/update_title" android:padding="@c1577a/default_padding_side" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/new_update_title" android:layout_below="@id/soroush_icon" />
    <TextView android:id="@id/update_description" android:paddingLeft="28dp" android:paddingRight="28dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/new_update_description" android:layout_below="@id/update_title" />
    <LinearLayout android:orientation="horizontal" android:id="@id/buttons_layout" android:paddingLeft="12dp" android:paddingRight="12dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:weightSum="2.0" android:layout_below="@id/update_description">
        <Button android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/update_button_yes" android:padding="@dimen/bs_grid_bottom_padding" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/button_yes" android:layout_weight="1.0" />
        <Button android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/update_button_no" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/button_no" android:layout_weight="1.0" />
    </LinearLayout>
</RelativeLayout>
