<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:id="@id/container_layout" android:paddingTop="12dp" android:clipChildren="false" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="7.0">
    <ImageView android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/intro_imageView" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x1" android:layout_marginTop="12dp" android:src="@drawable/intro_call" android:scaleType="fitCenter" android:layout_weight="4.0" />
    <TextView android:textAppearance="@style/IntroductionHeadingAppearance" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/heading_textView" android:paddingLeft="32dp" android:paddingRight="32dp" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x1" android:text="@string/introduction_one_header" android:layout_weight="0.5" />
    <TextView android:textAppearance="@style/IntroductionContentAppearance" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/content" android:paddingLeft="24dp" android:paddingTop="8dp" android:paddingRight="24dp" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x1" android:minHeight="@dimen/welcome_content_min_height" android:text="@string/introduction_one_content" android:layout_weight="1.0" />
    <RadioGroup android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/language_content" android:paddingLeft="32dp" android:paddingRight="32dp" android:visibility="invisible" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x1" android:layout_weight="1.5">
        <android.support.v7.widget.AppCompatRadioButton android:textAppearance="@style/IntroductionContentAppearance" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/farsi_radioButton" android:layout_width="match_parent" android:layout_height="wrap_content" android:checked="true" android:minHeight="36dp" android:text="@string/farsi" />
        <android.support.v7.widget.AppCompatRadioButton android:textAppearance="@style/IntroductionContentAppearance" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/english_radioButton" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="36dp" android:text="@string/english" />
    </RadioGroup>
</LinearLayout>
