<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:id="@id/root_layout" android:paddingLeft="@dimen/material_margin_wide" android:paddingTop="@dimen/material_margin_wide" android:paddingRight="@dimen/material_margin_wide" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textSize="15sp" android:textColor="@color/textColorPrimary" android:id="@id/caption_textView" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/invite_link_title_dialog" />
    <TextView android:textSize="15sp" android:textColor="@color/textColorPrimary" android:id="@id/enter_textView" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/invite_link" android:layout_below="@id/caption_textView" />
    <TextView android:textSize="14sp" android:textColor="@color/colorPrimaryDark" android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/invite_link_text_view" android:paddingLeft="@dimen/material_margin_low" android:paddingBottom="10dp" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/material_margin_low" android:text="No Link" android:layout_below="@id/enter_textView" />
    <Button android:id="@id/revoke_invite_link_button" android:paddingTop="@dimen/material_margin_wide" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/material_margin_wide" android:layout_marginTop="@dimen/material_margin_wide" android:layout_marginRight="@dimen/material_margin_wide" android:text="@string/action_revoke_invite_link" android:layout_below="@id/invite_link_text_view" style="@style/MyColoredButtonTheme" />
</RelativeLayout>
