<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent"
    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/material_margin_wide" android:layout_above="@id/options_layout" android:layout_alignParentTop="true">
        <ImageView android:id="@+id/imageView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerHorizontal="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/options_layout" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/material_margin_wide" android:layout_alignParentBottom="true">
        <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:textColor="@color/textColorPrimary" android:id="@id/title_textView" android:paddingLeft="@dimen/material_margin_huge" android:paddingTop="@dimen/material_margin_wide" android:paddingRight="@dimen/material_margin_huge" android:paddingBottom="@dimen/material_margin_wide" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/are_you_sure_to_deactivate_account_" />
        <TextView android:textColor="@color/textColorPrimary" android:id="@id/deactivate_textView" android:paddingLeft="@dimen/material_margin_extra" android:paddingTop="@dimen/material_margin_wide" android:paddingRight="@dimen/material_margin_extra" android:paddingBottom="@dimen/material_margin_wide" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/deactivate_my_account" android:maxLines="1" android:textAllCaps="true" style="@style/MyItemBackgroundStyle" />
        <TextView android:textColor="@color/textColorPrimary" android:id="@id/cancel_textView" android:paddingLeft="@dimen/material_margin_extra" android:paddingTop="@dimen/material_margin_wide" android:paddingRight="@dimen/material_margin_extra" android:paddingBottom="@dimen/material_margin_wide" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/cancel" android:maxLines="1" android:textAllCaps="true" style="@style/MyItemBackgroundStyle" />
    </LinearLayout>
</RelativeLayout>
